# model-express

./: .env.example  .env.v1.cloud.example  .env.v1.local.example  .gitignore  README.md
services/worker/: pyproject.toml
services/worker/tests/: test_champion_jobs.py  test_dataset_annotations.py  test_dataset_cache.py  test_dataset_exemplars.py  test_dataset_metadata_discovery.py  test_dataset_shards.py  test_dataset_tiers.py  test_demo_inference.py  test_demo_runtime.py  test_diagnostics.py  test_export_artifacts.py  test_export_metadata.py  test_export_self_test.py  test_heldout_demo_images.py  test_label_quality_audit_job.py  test_local_training.py  test_modal_dispatcher.py  test_orchestrator_client.py  test_portable_bundle.py  test_preprocessing_registry.py  test_profiler.py  test_training_modal_helpers.py  test_training_modal_provider.py  test_training_providers.py  test_visual_analysis_agent.py  test_visual_analysis_client.py  test_visual_analysis_job.py  test_visual_analysis_schema.py  test_visual_sampling.py  test_worker_main.py
services/worker/worker/: __init__.py  champion_jobs.py  diagnostics.py  jobs.py  main.py  orchestrator_client.py
services/worker/worker/datasets/: __init__.py  annotations.py  cache.py  exemplars.py  label_quality.py  metadata_discovery.py  profiler.py  shards.py  storage.py  tiers.py  visual_sampling.py
services/worker/worker/exporting/: __init__.py  artifacts.py  demo_runtime.py  inference.py  metadata.py  portable_bundle.py  preprocessing.py  self_test.py
services/worker/worker/metrics/: __init__.py
services/worker/worker/mlflow_logging/: __init__.py
(+249 files in other folders)
