[project]
name = "model-express-worker"
version = "0.1.0"
description = "Python GPU worker for Model Express training jobs"
requires-python = ">=3.11"
dependencies = [
  "boto3",
  "mlflow",
  "modal",
  "numpy",
  "onnx",
  "onnxruntime",
  "onnxscript",
  "pillow",
  "pydantic",
  "pyyaml",
  "requests",
  "scikit-learn",
  "torch",
  "torchvision",
  "ultralytics",
]

[project.scripts]
model-express-worker = "worker.main:main"

[tool.ruff]
line-length = 100
