[project]
name = "model-express-worker"
version = "0.1.0"
description = "Python GPU worker for Model Express training jobs"
requires-python = ">=3.11"
dependencies = [
  "boto3==1.42.96",
  "mlflow==3.13.0",
  "modal==1.5.0",
  "numpy==1.25.0",
  "onnx==1.21.0",
  "onnxruntime==1.26.0",
  "onnxscript==0.7.0",
  "pillow==10.1.0",
  "pydantic==2.4.2",
  "pyyaml==6.0.3",
  "requests==2.31.0",
  "scikit-learn==1.3.2",
  "torch==2.12.0",
  "torchvision==0.27.0",
  "ultralytics==8.4.66",
]

[project.scripts]
model-express-worker = "worker.main:main"

[tool.ruff]
line-length = 100
